--- a/client/src/app/header/search-typeahead.component.scss
+++ b/client/src/app/header/search-typeahead.component.scss
@@ -86,7 +86,7 @@ li.suggestion {
     flex: 1;
 
     input {
-      width: unset;
+      width: 70px;
     }
   }
 
